--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/_settings.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/_settings.scss
@@ -12,26 +12,48 @@
 //   7. Menu
 //   8. Thumbnail
 
+// 0. Shoreditch values
+// ---------
+
+$primary-color:   $brand-primary;
+$secondary-color: $gray-light;
+$success-color:   $brand-success;
+$warning-color:   $brand-warning;
+$alert-color:     $brand-danger;
+$light-gray:      $gray-lighter;
+$medium-gray:     $gray-dark;
+$dark-gray:       $gray-darker;
+$white:           $crm-white;
+$body-background: $crm-background;
+
+$global-font-size: $font-size-base;
+$h1-font-size:     $font-size-h1;
+$h2-font-size:     $font-size-h2;
+$h3-font-size:     $font-size-h3;
+$h4-font-size:     $font-size-h4;
+$h5-font-size:     $font-size-h5;
+$h6-font-size:     $font-size-h6;
+
+$global-font-color:  $text-color;
+$body-font-family:   $font-family-base;
+$global-line-height: $line-height-base;
+$header-color:       $headings-color;
+
+$header-font-weight: $headings-font-weight;
+
+$anchor-color:       $link-color;
+$anchor-color-hover: $link-hover-color;
 
 // 1. Global
 // ---------
 
-$primary-color: #2199e8;
-$secondary-color: #777777;
-$success-color: #3adb76;
-$warning-color: #ffae00;
-$alert-color: #ec5840;
-$light-gray: #f3f3f3;
-$medium-gray: #cacaca;
-$dark-gray: #8a8a8a;
 $black: #0a0a0a;
-$white: #fefefe;
 $pre-color: #ff6908;
+
 $global-width: 580px;
 $global-width-small: 95%;
 $global-gutter: 16px;
-$body-background: $light-gray;
-$container-background: $white;
+$container-background: transparent;
 $global-padding: 16px;
 $global-margin: 16px;
 $global-radius: 3px;
@@ -54,21 +76,9 @@ $block-grid-gutter: $global-gutter;
 // 4. Typography
 // -------------
 
-$global-font-color: $black;
-$body-font-family: Helvetica, Arial, sans-serif;
 $global-font-weight: normal;
-$header-color: inherit;
-$global-line-height: 1.3;
-$global-font-size: 16px;
 $body-line-height: $global-line-height;
 $header-font-family: $body-font-family;
-$header-font-weight: $global-font-weight;
-$h1-font-size: 34px;
-$h2-font-size: 30px;
-$h3-font-size: 28px;
-$h4-font-size: 24px;
-$h5-font-size: 20px;
-$h6-font-size: 18px;
 $header-margin-bottom: 10px;
 $paragraph-margin-bottom: 10px;
 $small-font-size: 80%;
@@ -85,9 +95,7 @@ $hr-width: $global-width;
 $hr-border: 1px solid $black;
 $hr-margin: 20px auto;
 $anchor-text-decoration: none;
-$anchor-color: $primary-color;
 $anchor-color-visited: $anchor-color;
-$anchor-color-hover: darken($primary-color, 10%);
 $anchor-color-active: $anchor-color-hover;
 $stat-font-size: 40px;
 
@@ -103,12 +111,12 @@ $button-padding: (
 $button-font-size: (
   tiny: 10px,
   small: 12px,
-  default: 16px,
+  default: $font-size-base,
   large: 20px,
 );
 $button-color: $white;
 $button-color-alt: $medium-gray;
-$button-font-weight: bold;
+$button-font-weight: $global-font-weight;
 $button-margin: 0 0 $global-margin 0;
 $button-background: $primary-color;
 $button-border: 2px solid $button-background;
@@ -120,7 +128,7 @@ $button-rounded: $global-rounded;
 
 $callout-background: $white;
 $callout-background-fade: 85%;
-$callout-padding: 10px;
+$callout-padding: 20px;
 $callout-margin-bottom: $global-margin;
 $callout-border: 1px solid darken($callout-background, 20%);
 $callout-border-secondary: 1px solid darken($secondary-color, 20%);
