--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
@@ -1,3 +1,6 @@
+@import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
+@import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
+
 @import 'settings';
 @import 'foundation-emails';
 
