--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
@@ -2,6 +2,7 @@
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
 
 @import 'settings';
+@import 'base';
 @import 'foundation-emails';
 
 @import 'template/template';
