--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/app.scss
@@ -1,6 +1,8 @@
 @import "SCSSROOT/org.civicrm.shoreditch/scss/bootstrap/overrides/variables";
 @import "SCSSROOT/org.civicrm.shoreditch/base/scss/vendor/bootstrap/variables";
 
+@import "mixins/margin";
+
 @import 'settings';
 @import 'base';
 @import 'foundation-emails';
