--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_email.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_email.scss
@@ -1,14 +1,12 @@
 $email-heading-line-height: 40px;
 
 .email {
-  margin: 40px 0;
-  Margin: 40px 0;
+  @include margin(40px);
 }
 
 .email-date {
+  @include margin(0, bottom);
   line-height: $email-heading-line-height;
-  margin-bottom: 0;
-  Margin-bottom: 0;
 
   @media only screen and (max-width: #{$global-breakpoint}) {
     line-height: normal !important;
@@ -20,10 +18,9 @@ $email-heading-line-height: 40px;
 }
 
 .email-title {
+  @include margin(0, bottom);
   border-left: 5px solid $brand-primary;
   font-size: $font-size-h2;
   line-height: $email-heading-line-height;
-  margin-bottom: 0;
-  Margin-bottom: 0;
   padding-left: 15px;
 }
