--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -7,7 +7,7 @@
         <div class="chr_custom-select chr_custom-select--full">
           <select
             name="reason"
-            ng-disabled="$ctrl.isMode('view') || $ctrl.isRole('manager')"
+            ng-disabled="$ctrl.isMode('view') || ($ctrl.isRole('manager') && !$ctrl.isLeaveType('sickness'))"
             ng-options="reason.value as reason.label for reason in $ctrl.sicknessReasons"
             ng-model="$ctrl.request.sickness_reason">
             <option value="">- select -</option>
