AI-72: Fix standard search and results page issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -76,6 +76,11 @@
         vertical-align: middle;
       }
 
+      > td:last-child {
+        padding-right: 15px;
+        text-align: right;
+      }
+
       > td:not(:last-child),
       > th:not(:last-child) {
         line-height: 20px;
