--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -77,12 +77,28 @@
     }
   }
 
-  .btn-slide:after {
-    @include fa-icon($font-size-base, $fa-var-ellipsis-v, $brand-primary);
-    background: none;
-    right: -2px;
-    top: 4px;
-    width: 5px;
+  span.btn-slide {
+    display: inline-block;
+    padding-right: 0 !important;
+    text-indent: -100em;
+    width: 10px;
+
+    &:after {
+      @include fa-icon($font-size-base, $fa-var-ellipsis-v, $brand-primary);
+      background: none;
+      right: -2px;
+      text-indent: 0;
+      top: 4px;
+      width: 5px;
+    }
+
+    &:hover:after {
+      color: $gray-darker;
+    }
+
+    .panel {
+      text-indent: 0;
+    }
   }
 
   .dataTables_info {
