--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -205,39 +205,39 @@ $control-height: 30px;
 
         .select2-choices {
           border: solid 1px $crm-darker-grayblue;
-          border-radius: 2px;
-          box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
-          width: 100%;
+          border-radius: $border-radius-base;
+          box-shadow: $crm-checkbox-shadow;          
           box-sizing: border-box;
           font-family: inherit;
           line-height: inherit;
           padding-right: 20px;
+          width: 100%;
 
           &::before {
             line-height: 22px;
           }
 
           .select2-search-choice {
-            padding: 0 15px 0 5px;
+            background: none;
+            border-color: $brand-primary;
+            border-radius: 0;
             line-height: 20px;
             margin-top: 4px;
-            background: none;
-            border-radius: 0;
-            border-color: $brand-primary;
+            padding: 0 15px 0 5px;
 
             > div {
+              display: inline-block;
               line-height: normal;
               padding-right: 10px;
-              display: inline-block;
               vertical-align: text-bottom;
             }
 
             .select2-search-choice-close {
+              left: auto !important;
               line-height: inherit;
               padding-right: 5px;
               position: absolute;
               right: 0 !important;
-              left: auto !important;
               top: 1px;
             }
           }
@@ -254,13 +254,11 @@ $control-height: 30px;
         }
 
         &.select2-dropdown-open .select2-choices::before {
-          content: '\f002';
+          @include fa-icon($fa-var-search);
         }
 
-        &.select2-container-disabled {
-          .select2-choices {
+        &.select2-container-disabled .select2-choices {
             width: inherit;
-          }
         }
       }
 
@@ -268,13 +266,20 @@ $control-height: 30px;
         &,
         .select2-arrow,
         .select2-choice,
-        .select2-choices,
+        .select2-choices {
+          &,
+          &::before {
+            background: $input-bg-disabled !important;
+            border-color: $disabled-color !important;
+            color: $disabled-color !important;
+          }
+        }
+        
         .select2-chosen {
           &,
           &::before {
             border-color: $disabled-color !important;
             color: $disabled-color !important;
-            background: $input-bg-disabled !important;
           }
         }
 
@@ -295,17 +300,14 @@ $control-height: 30px;
         }
 
         .select2-chosen {
-          font-size: 13px;
+          font-size: $font-size-base;
           font-weight: normal;
         }
       }
 
       &.select2-container-active {
-
-        &:not(.select2-dropdown-open) {
-          span {
-            color: $brand-primary;
-          }
+        &:not(.select2-dropdown-open) span {          
+            color: $brand-primary;          
         }
 
         &.select2-dropdown-open {
