AI-105: Fix find contributions results page issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -84,19 +84,25 @@
   }
 
   .CRM_Contribute_Form_Task_Batch {
+    fieldset {
+      box-shadow: $box-shadow;
+    }
+
     .help {
       background: $crm-white;
+      border-radius: $border-radius-child $border-radius-child 0 0;
       margin: 0;
     }
 
     .crm-submit-buttons {
       background: $crm-white;
+      border-radius: 0 0 $border-radius-child $border-radius-child;
       margin: 0;
       padding: 15px 10px 23px;
     }
 
     .columnheader {
-      border-bottom: 1px solid $crm-dark-grayblue;
+      border-color: $crm-dark-grayblue !important;
       border-left: none !important;
       border-right: none !important;    
 
@@ -126,7 +132,24 @@
         border: none;
         color: $crm-copy;
         padding: 10px 20px;
+
+        &:nth-child(6) {
+          width: 200px;
+        }
       }
+    }
+
+    .dateplugin {
+      margin-bottom: 5px; 
+      max-width: 150px;      
+    }
+
+    .six.crm-form-text {
+      max-width: 83px;
+    }
+
+    .addon.fa-calendar {
+      padding: 8px 10px 9px;
     }
 
     input[type="text"],
@@ -136,7 +159,6 @@
       border-radius: $border-radius-small;
       box-shadow: $crm-input-shadow;
       color: $gray-darker;
-      display: block;
       font-size: $font-size-base !important;
       font-weight: normal !important;
       height: 30px;
@@ -443,31 +465,33 @@
     }
   }
 
+  #PickProfile .crm-contribution-form-block {
+    padding-top: 20px; 
+
+    td {
+      padding: 0 20px;
+    }
+  }
+
   @media (max-width: $screen-sm-min) {
-    .crm-accordion-body {
-      > .form-layout {
-        > tbody {
-          > tr {
-            display: block !important;
+    .crm-accordion-body > .form-layout tbody tr{      
+      display: block !important;
 
-            td {
-              display: block;
-              width: auto !important;
+      td {
+        display: block;
+        width: auto !important;
 
-              .float-left {
-                margin-left: 0 !important;
-                width: 100%;
-              }
-
-              input:not([type='radio']):not([type='checkbox']):not(.crm-form-submit),
-              .select2-container {
-                display: block;
-                width: 100% !important;
-              }
-            }
-          }
+        .float-left {
+          margin-left: 0 !important;
+          width: 100%;
         }
-      }
+
+        input:not([type='radio']):not([type='checkbox']):not(.crm-form-submit),
+        .select2-container {
+          display: block;
+          width: 100% !important;
+        }
+      }          
     }
   }
 }
