AI-107: Fix memberships search results issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/_variables.scss
@@ -29,3 +29,7 @@ $crm-min-width: 1005px;
 $crm-max-width: 1504px;
 $crm-min-lg-width: 1505px;
 $crm-sm-th-width: 200px;
+
+$fa-var-alert: '\f06a';
+$fa-var-info-msg: '\f05a';
+$fa-var-success: '\f00c';
