--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -302,6 +302,7 @@ $control-height: 30px;
         .select2-chosen {
           font-size: $font-size-base;
           font-weight: normal;
+          line-height: 27px;
         }
       }
 
