PCHR-2198: Add TOIL email template

--- a/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
+++ b/uk.co.compucorp.civicrm.hremails/email-templates/src/assets/scss/components/_request.scss
@@ -61,3 +61,22 @@
     }
   }
 }
+
+.request-data-large {
+
+  dt {
+    width: 200px;
+  }
+}
+
+
+.request-data-toil {
+  line-height: 2.5;
+
+  span {
+    border: 1px solid $medium-gray;
+    display: inline-block;
+    text-align: center;
+    width: 100px;
+  }
+}
