AI-119: Fix help or information sections on a page should all be the same and be in green

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_base.scss
@@ -16,7 +16,7 @@
   }
 
   .crm-form-block {
-    border-radius: $border-radius-base !important;
+    border-radius: $panel-border-radius !important;
   }
 
   table td .btn-slide-active ul.panel {
