AI-115: Fix suggested issue in PR

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -775,7 +775,7 @@
         td {
           border-right: none;
           color: $crm-copy;
-          line-height: 1.5;
+          line-height: 1.5em;
           padding: 15px 20px;
         }
 
