AI-111: Fix find contributions and search results issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -118,6 +118,7 @@
   @extend %civihr-table;
   background: transparent;
   border: none;
+  border-radius: $panel-border-radius;
   font-family: $font-family-base;
   width: 100% !important;
 
