--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -713,8 +713,8 @@
           border-color: $brand-primary;
           border-radius: $border-radius-base;
           color: $crm-white;
-          font-size: $font-size-base;
           font-family: $font-family-base;
+          font-size: $font-size-base;
           padding: 8px 12px;
           text-shadow: none;
           text-transform: uppercase;
@@ -722,15 +722,40 @@
       }
 
       #memberSearch .selector {
+        border-radius: $border-radius-child;
+
+        thead.sticky {
+          background: transparent;
+        }
+
         th, td {
+          padding: 15px 10px 15px;
+
           &:nth-child(1),
           &:nth-child(2) {
             padding: 15px 5px 15px 20px !important;
+            text-align: left;
           }
 
           &:last-child {
             min-width: 82px;
             padding: 15px 20px 15px 5px !important;
+
+            .crm-hover-button:hover {
+              color: $brand-primary !important;
+            }
+          }
+
+          &:nth-child(5), &:nth-child(6), &:nth-child(7) {
+            min-width: 110px;
+          }
+
+          &:nth-child(3),
+          &:nth-child(8) {
+            max-width: 95px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
           }
         }
       }
