PCHR-1421: Implement Error handling at api level

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -353,7 +353,8 @@
     uib-alert
     type="danger"
     close="$ctrl.closeAlert()"
-    dismiss-on-timeout="5000">{{$ctrl.error}}
+    ng-bind-html="$ctrl.error"
+    dismiss-on-timeout="5000">
   </div>
   <div class="modal-footer">
     <button
